# bloaty-metafile

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yml  test.yml
src/: error.rs  lib.rs  main.rs  packages.rs  tool.rs  tree.rs
