[package]
name = "bloaty-metafile"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "bloaty-metafile"
repository = "https://github.com/ahaoboy/bloaty-metafile"
homepage = "https://github.com/ahaoboy/bloaty-metafile"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
serde-metafile = "0.1"
serde_json = "1"
cargo-lock = "10"
clap = { version = "4.5", features = ["derive"] }
