[package]
name = "bloaty-metafile"
version = "0.1.8"
edition = "2024"
license = "MIT"
description = "bloaty-metafile"
repository = "https://github.com/ahaoboy/bloaty-metafile"
homepage = "https://github.com/ahaoboy/bloaty-metafile"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
serde-metafile = "0.1"
serde_json = "1"
cargo-lock = "10"
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = "1"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
